--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8543542161839992"
+     crossorigin="anonymous"></script>
   <meta charset="UTF-8">
   <title>주식 복리 계산기</title>
   <style>
